@@ -1,0 +1,28 @@
+# This file is part of GDBM.                                   -*- autoconf -*-
+# Copyright (C) 2025 Free Software Foundation, Inc.
+#
+# GDBM is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GDBM is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with GDBM. If not, see <http://www.gnu.org/licenses/>. */
+
+AT_SETUP([Pipe])
+AT_KEYWORDS([gdbmtool pipe])
+AT_CHECK([
+AT_DATA([input],
+[version | sed -e 's/^GDBM version //' -e 's/(.*)//' -e 's/\. *$//'
+])
+gdbmtool -f input
+],
+[0],
+[AT_PACKAGE_VERSION
+])
+AT_CLEANUP
