@@ -88,8 +88,13 @@ m4_include([gdbmtool00.at])
 m4_include([gdbmtool01.at])
 m4_include([gdbmtool02.at])
 m4_include([gdbmtool03.at])
+m4_include([gdbmtool04.at])
 
 AT_BANNER([Database formats])
 m4_include([conv.at])
+
+AT_BANNER([Free space management])
+m4_include([coalesce.at])
+
 
 # End of testsuite.at
